--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@nativescript/camera": "~5.0.13",
     "@nativescript/core": "~8.3.0",
     "@nativescript/theme": "~3.0.2",
-    "@nativescript/camera": "~5.0.13"
+    "@nativescript/geolocation": "5.1.0"
   },
   "devDependencies": {
     "@nativescript/preview-cli": "1.0.0",
