--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@nativescript/camera": "~5.0.13",
     "@nativescript/core": "~8.3.0",
     "@nativescript/theme": "~3.0.2",
-    "@nativescript/geolocation": "5.1.0"
+    "nativescript-geolocation": "5.1.0"
   },
   "devDependencies": {
     "@nativescript/preview-cli": "1.0.0",
